Afegides classes Picture_IO, Audio_IO i Video_IO (cap d'ells detecta els permisos acceptats).
La classe Txt_IO fa la seva funció correctament.

--- a/app/src/main/res/layout/activity_text.xml
+++ b/app/src/main/res/layout/activity_text.xml
@@ -120,13 +120,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="1mm"
-                android:text="Escriu el nom de l'arxiu on desar el text:" />
+                android:text="Escriu el nom de l'arxiu on desar el text sense extensió:" />
 
             <EditText
                 android:id="@+id/etNomArxiu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="nomArxiu.txt"
+                android:hint="nomArxiu"
                 android:padding="1mm" />
 
             <Button
