--- a/app/src/main/res/layout/activity_cercar_arxius.xml
+++ b/app/src/main/res/layout/activity_cercar_arxius.xml
@@ -14,7 +14,8 @@
         android:textAlignment="center"
         android:textStyle="bold"
         android:padding="20dp"
-        android:background="#D1D1D1"/>
+        android:background="#D1D1D1"
+        android:textColor="@color/black"/>
     <ListView
         android:id="@+id/lvArxius"
         android:layout_width="match_parent"
