--- a/app/src/main/res/layout/activity_llistat_arxius.xml
+++ b/app/src/main/res/layout/activity_llistat_arxius.xml
@@ -1,9 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Objectes.Llistat_Arxius">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    tools:context=".LlistatArxius"
+    android:orientation="vertical"
+    android:padding="10dp">
+    <TextView
+        android:id="@+id/tvLlistat"
+        android:text="Llistat d'arxius"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="30dp"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:padding="20dp"
+        android:background="#D1D1D1"
+        android:textColor="@color/black"/>
+    <ListView
+        android:id="@+id/lvArxius"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+</LinearLayout>
